--- a/gotec/app/src/main/res/values/colors.xml
+++ b/gotec/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="guindo">#411c22</color>
     <color name="hueso">#f6e4d6</color>
+    <color name="rosita">#dd787c</color>
 </resources>
