--- a/gotec/app/src/main/res/layout/activity_conductor.xml
+++ b/gotec/app/src/main/res/layout/activity_conductor.xml
@@ -13,14 +13,31 @@
         android:layout_height="81dp"
         android:background="@drawable/botoncito"
         android:text="Registrar Viaje"
-        android:textSize="24sp"
+        android:textColor="@color/hueso"
+        android:textSize="30sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.175" />
+        app:layout_constraintVertical_bias="0.132" />
+
+    <Button
+        android:id="@+id/btnborrar"
+        android:layout_width="286dp"
+        android:layout_height="85dp"
+        android:background="@drawable/botoncito"
+        android:text="Eliminar Ultimo Viaje"
+        android:textColor="@color/hueso"
+        android:textSize="30sp"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.34" />
 
     <Button
         android:id="@+id/BtnVerMensaje"
@@ -28,26 +45,30 @@
         android:layout_height="82dp"
         android:background="@drawable/botoncito"
         android:text="Ver mensajes"
-        android:textSize="24sp"
+        android:textColor="@color/hueso"
+        android:textSize="30sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.468"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.414" />
+        app:layout_constraintVertical_bias="0.559" />
 
     <Button
         android:id="@+id/BtnSalirConductor"
         android:layout_width="283dp"
         android:layout_height="82dp"
         android:background="@drawable/botoncito"
-        android:text="Salir"
-        android:textSize="34sp"
+        android:text="Cerrar sesion"
+        android:textColor="@color/hueso"
+        android:textSize="30sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.676" />
+        app:layout_constraintVertical_bias="0.781" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
