--- a/gotec/app/src/main/res/layout/activity_registrar_viaje.xml
+++ b/gotec/app/src/main/res/layout/activity_registrar_viaje.xml
@@ -7,75 +7,118 @@
     android:background="@color/guindo"
     tools:context=".RegistrarViaje">
 
+
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/registrarViaje"
         android:layout_width="154dp"
-        android:layout_height="55dp"
+        android:layout_height="54dp"
         android:background="@drawable/botoncito"
-        android:text="Regresar"
+        android:text="Registrar"
+        android:textColor="@color/hueso"
+        android:textSize="24sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.89" />
+        app:layout_constraintVertical_bias="0.858" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="154dp"
-        android:layout_height="54dp"
-        android:background="@drawable/botoncito"
-        android:text="Registrar"
-        app:backgroundTint="@null"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:textColorHint="@color/black"
+        app:boxBackgroundMode="filled"
+        app:boxStrokeColor="@android:color/transparent"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+        app:hintTextColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.793" />
+        app:layout_constraintVertical_bias="0.742">
 
-    <EditText
-        android:id="@+id/tarifa"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:background="@drawable/edit_text_redondeados"
-        android:ems="10"
-        android:hint="tarifa"
-        android:gravity="center"
-        android:inputType="number"
+        <EditText
+            android:id="@+id/tarifa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_redondeados"
+            android:ems="10"
+            android:hint="tarifa"
+            android:inputType="number"
+            android:textColor="@color/guindo"
+            android:textColorHighlight="@color/black"
+            android:textColorHint="@color/guindo"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.486"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.73" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+    <!-- Mapa para seleccionar puntos A y B -->
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        app:boxBackgroundMode="filled"
+        app:boxStrokeColor="@android:color/transparent"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+        app:hintTextColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.696" />
+        app:layout_constraintVertical_bias="0.643">
 
-    <EditText
-        android:id="@+id/hora"
-        android:layout_width="221dp"
-        android:layout_height="42dp"
-        android:background="@drawable/edit_text_redondeados"
-        android:ems="10"
-        android:hint="hora"
-        android:gravity="center"
-        android:inputType="time"
+        <EditText
+            android:id="@+id/hora"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_redondeados"
+            android:ems="10"
+            android:hint="hora"
+            android:inputType="time"
+            android:textColor="@color/guindo"
+            android:textColorHighlight="@color/black"
+            android:textColorHint="@color/guindo"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.489"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.635" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <FrameLayout
+        android:layout_width="412dp"
+        android:layout_height="409dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.611" />
+        app:layout_constraintVertical_bias="0.0">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="223dp"
-        android:layout_height="359dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.096"
-        app:srcCompat="@drawable/mapa" />
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
