--- a/gotec/app/src/main/res/layout/activity_registrarse.xml
+++ b/gotec/app/src/main/res/layout/activity_registrarse.xml
@@ -15,119 +15,155 @@
         android:padding="10dp"
         >
 
-
-        <EditText
-            android:id="@+id/nombre"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/edit_text_redondeados"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="Nombre"
-            android:inputType="text"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.116" />
+            app:boxBackgroundMode="filled"
+            app:boxCollapsedPaddingTop="8dp"
+            app:hintTextColor="@color/black"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
+            app:boxStrokeColor="@android:color/transparent"
+            >
 
-        <EditText
-            android:id="@+id/correo"
+
+            <EditText
+                android:id="@+id/nombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_text_redondeados"
+                android:drawableStart="@drawable/ic_nombre_usuario"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:hint="Nombre"
+                android:inputType="textPersonName|textCapWords"
+                android:textColor="@color/guindo"
+                android:textColorHighlight="@color/black"
+                android:textColorHint="@color/guindo"
+                android:textSize="20dp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_redondeados"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="correo"
-            android:layout_marginTop="10dp"
-            android:inputType="textEmailAddress"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.509"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.235" />
+            app:boxBackgroundMode="filled"
+            app:hintTextColor="@color/black"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
+            app:boxStrokeColor="@android:color/transparent">
 
+            <EditText
+                android:id="@+id/correo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_text_redondeados"
+                android:drawableStart="@drawable/ic_email"
+                android:drawablePadding="10dp"
+                android:hint="Correo electrónico"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/guindo"
+                android:textColorHint="@color/guindo"
+                android:textSize="20dp" />
 
+        </com.google.android.material.textfield.TextInputLayout>
 
-
-        <EditText
-            android:id="@+id/password"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_redondeados"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="contraseña"
-            android:layout_marginTop="10dp"
-            android:inputType="textPassword"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.518"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.369" />
+            app:passwordToggleEnabled="true"
+            app:boxBackgroundMode="filled"
+            app:hintTextColor="@color/black"
+            app:passwordToggleTint="@color/guindo"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
+            app:boxStrokeColor="@android:color/transparent">
 
-        <EditText
-            android:id="@+id/confirmPassword"
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_text_redondeados"
+                android:drawableStart="@drawable/ic_pass"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:hint="Contraseña"
+                android:inputType="textPassword"
+                android:textColor="@color/guindo"
+                android:textColorHint="@color/guindo"
+                android:textSize="20dp"
+                app:passwordToggleEnabled="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_redondeados"
-            android:ems="10"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:hint="confirmar contraseña"
-            android:inputType="textPassword"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.525"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:passwordToggleEnabled="true"
+            app:boxBackgroundMode="filled"
+            app:hintTextColor="@color/black"
+            app:passwordToggleTint="@color/guindo"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
+            app:boxStrokeColor="@android:color/transparent">
 
+            <EditText
+                android:id="@+id/confirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_text_redondeados"
+                android:drawableStart="@drawable/ic_pass"
+                android:drawablePadding="10dp"
+                android:hint="Confirmar contraseña"
+                android:inputType="textPassword"
+                android:textColor="@color/guindo"
+                android:textSize="20dp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="seleccione su rol:"
+            android:textColor="@color/hueso"
+            android:textSize="20dp">
+
+        </TextView>
 
         <RadioGroup
             android:id="@+id/pajaseroConductorGrupo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="40dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="40dp"
             android:checkedButton="@id/pasajero"
             android:orientation="horizontal"
-            android:padding="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.521"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
-            app:layout_constraintVertical_bias="0.274">
+            android:padding="16dp">
 
 
             <RadioButton
                 android:id="@+id/pasajero"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:background="@drawable/rol_background_selector"
                 android:button="@android:color/transparent"
                 android:text="Pasajero"
+                android:layout_marginRight="5dp"
                 android:textAlignment="center"
+                android:textSize="20dp"
                 android:textColor="@color/rol_text_selector" />
 
             <RadioButton
                 android:id="@+id/conductor"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:background="@drawable/rol_background_selector"
                 android:button="@android:color/transparent"
                 android:text="Conductor"
+                android:textSize="20dp"
                 android:textAlignment="center"
                 android:textColor="@color/rol_text_selector" />
 
@@ -138,15 +174,10 @@
             android:layout_height="wrap_content"
             android:background="@drawable/botoncito"
             android:text="Registrarse"
+            android:textColor="@color/hueso"
             android:layout_marginTop="10dp"
             android:textSize="24sp"
-            app:backgroundTint="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.85" />
+            app:backgroundTint="@null" />
 
     </LinearLayout>
 </RelativeLayout>
